# DN_SuperBook_PDF_Converter

./: .gitignore  CLAUDE.md  README.md
superbook-pdf/: Cargo.toml  Containerfile  README.md  Taskfile.yml  compose.yml
superbook-pdf/.claude/: ralph-loop.local.md
superbook-pdf/ai_bridge/: pyproject.toml  yomitoku_bridge.py
superbook-pdf/benches/: pipeline_bench.rs
superbook-pdf/docker/backend/: Containerfile
superbook-pdf/specs/: 00-overview.spec.md  01-cli.spec.md  02-pdf-reader.spec.md  03-pdf-writer.spec.md  04-image-extract.spec.md  05-deskew.spec.md  06-margin.spec.md  07-page-number.spec.md  08-ai-bridge.spec.md  09-realesrgan.spec.md  17-cache.spec.md  18-pipeline.spec.md  19-config.spec.md  21-websocket.spec.md  29-yomitoku.spec.md
superbook-pdf/src/: ai_bridge.rs  cache.rs  cli.rs  color_stats.rs  config.rs  deskew.rs  finalize.rs  image_extract.rs  lib.rs  main.rs  margin.rs  normalize.rs  page_number.rs  pdf_reader.rs  pdf_writer.rs  pipeline.rs  realesrgan.rs  reprocess.rs  util.rs  yomitoku.rs
superbook-pdf/src/deskew/: algorithm.rs  mod.rs  types.rs
superbook-pdf/src/web/: job.rs  rate_limit.rs  routes.rs  server.rs  worker.rs
superbook-pdf/tests/: cli_integration.rs
superbook-pdf/tests/fixtures/: create_fixtures.py
