[package]
name = "superbook-pdf"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "High-quality PDF converter for scanned books with AI enhancement"
authors = ["DN_SuperBook_PDF_Converter Contributors"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# PDF
lopdf = "0.34"
printpdf = "0.7"

# Image processing
image = "0.25"
imageproc = "0.25"

# OCR
# tesseract = "0.15"  # Uncomment when tesseract is available

# Parallelism
rayon = "1.10"
num_cpus = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config
dirs = "6"

# Utilities
tempfile = "3"
which = "7"
sha2 = "0.10.9"
chrono = "0.4.43"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
# procfs = "0.17"  # Linux-specific, uncomment when needed

[[bench]]
name = "pipeline_bench"
harness = false

[[bin]]
name = "superbook-pdf"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
