[package]
name = "superbook-pdf"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0"
description = "High-quality PDF converter for scanned books with AI enhancement, deskew correction, and Japanese OCR"
authors = ["clearclown", "Daiyuu Nobori <original author>"]
repository = "https://github.com/clearclown/DN_SuperBook_PDF_Converter_Linux"
homepage = "https://github.com/clearclown/DN_SuperBook_PDF_Converter_Linux"
documentation = "https://docs.rs/superbook-pdf"
readme = "README.md"
keywords = ["pdf", "scanner", "ocr", "image-processing", "deskew"]
categories = ["command-line-utilities", "multimedia::images", "text-processing"]
exclude = [
    "tests/*",
    "specs/*",
    "docker/*",
    ".github/*",
    "compose.yml",
    "Containerfile",
    "Taskfile.yml",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# PDF
lopdf = "0.34"
printpdf = "0.7"

# Image processing
image = "0.25"
imageproc = "0.25"

# OCR
# tesseract = "0.15"  # Uncomment when tesseract is available

# Parallelism
rayon = "1.10"
num_cpus = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config
dirs = "6"

# Web server (optional)
axum = { version = "0.8", features = ["multipart", "ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors", "limit"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
rust-embed = { version = "8", optional = true }
dashmap = { version = "6", optional = true }

# Utilities
tempfile = "3"
which = "7"
sha2 = "0.10.9"
chrono = { version = "0.4.43", features = ["serde"] }

# Enhancement dependencies
strsim = "0.11"           # String similarity for fuzzy matching
base64 = "0.22"           # Base64 encoding for preview images

[features]
default = []
web = ["axum", "tokio", "tower", "tower-http", "uuid", "rust-embed", "dashmap"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
# procfs = "0.17"  # Linux-specific, uncomment when needed

[[bench]]
name = "pipeline_bench"
harness = false

[[bin]]
name = "superbook-pdf"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
