[project]
name = "superbook-ai-bridge"
version = "0.1.0"
description = "AI tools bridge for superbook-pdf (RealESRGAN, YomiToku)"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }

dependencies = [
    # Core dependencies
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",

    # RealESRGAN dependencies
    "basicsr>=1.4.2",
    "realesrgan>=0.3.0",
    "facexlib>=0.3.0",
    "gfpgan>=1.3.8",

    # YomiToku dependencies
    "yomitoku>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
